<resources>
    <string name="money_amount_template">%s ₽</string>
    <string name="title_home">Главная</string>
    <string name="title_menu">Меню</string>
    <string name="home_screen_toolbar">Главная</string>
    <string name="home_screen_title_card1">Сумма займа</string>
    <string name="home_screen_card1_currency">₽</string>
    <string name="home_screen_left_border_placeholder">0 ₽</string>
    <string name="home_screen_right_border_placeholder">100 ₽</string>
    <string name="home_screen_conditions_label_template">Под %s%% на %s дней</string>
    <string name="home_screen_card1_button">Продолжить</string>
    <string name="home_screen_conditions_title">Условия</string>
    <string name="home_screen_conditions_label_placeholder">Под x% на у дней</string>
    <string name="home_screen_conditions_card2_title">Мои займы</string>
    <string name="home_screen_card2_empty_label">Здесь будут отображаться Ваши активные займы</string>
    <string name="home_screen_card2_button">Посмотреть все</string>
    <string name="loan_item_id_template">№ %s</string>
    <string name="menu_screen_toolbar">Меню</string>
    <string name="menu_screen_dialog">Вы точно хотите выйти?</string>
    <string name="request_screen_toolbar">Оформление займа</string>
    <string name="request_screen_title">Ваши данные</string>
    <string name="request_screen_name_field">Имя</string>
    <string name="request_screen_surname_field">Фамилия</string>
    <string name="request_screen_phone_field">Телефон</string>
    <string name="request_screen_button">Оформить займ</string>
    <string name="request_screen_hint">После оформления заявки на займ, банк проведет анализ вашей кредитной истории</string>
    <string name="loans_screen_toolbar">Мои займы</string>
    <string name="details_screen_name_title">Имя</string>
    <string name="details_screen_surname_title">Фамилия</string>
    <string name="details_screen_phone_title">Номер телефона</string>
    <string name="details_screen_id_title">Номер займа</string>
    <string name="details_screen_date_title">Дата оформления</string>
    <string name="details_screen_period_title">Период (дней)</string>
    <string name="details_screen_percent_title">Процент</string>
    <string name="details_screen_amount_title">Сумма</string>
    <string name="details_screen_status_title">Статус</string>
    <string name="details_screen_hint">Когда займ примет статус «Одобрен», Вам нужно будет подойти с паспортом в отделение банка для подписания договора и получить деньги</string>
    <string name="percent_template">%s%% </string>
    <string name="menu_loans_button">Мои займы</string>
    <string name="menu_offers">Предложения для вас</string>
    <string name="menu_branches">Отделения банка</string>
    <string name="menu_help">Помощь</string>
    <string name="menu_language">Язык</string>
    <string name="menu_exit">Выход</string>
    <string name="name_alert">Имя может содержать только буквы русского алфавита и только первая - верхнего регистра</string>
    <string name="surname_alert">Имя может содержать только буквы русского алфавита и только первая - верхнего регистра</string>
    <string name="phone_alert">Номер должен начинаться с +7 и быть корректным</string>
    <string name="error_dialog_placeholder">Placeholder text</string>
    <string name="menu_error_placeholder">Обнаружена проблема с текущей сессией. Приложение будет закрыто</string>
    <string name="home_forbidden_error_text">Кажется произошла ошибка авторизации. Попробуйте перзапустить приложение</string>
    <string name="home_loan_conditions_error_text">Какие-то проблемы на сервере. Не удается найти условия займа</string>
    <string name="home_network_error_text">Проблема с сетевым подключением. Проверьте, включен ли у вас интернет</string>
    <string name="home_not_found_error_text">Важный элемент не был найден в ответе сервера</string>
    <string name="home_request_error_text">Проблема с запросом на сервер</string>
    <string name="home_response_error_text">Непредвиденная ошибка в ответе сервера</string>
    <string name="home_unauthorized_error_text">Кажется произошла ошибка авторизации. Попробуйте перзапустить приложение</string>
    <string name="home_unknown_error_text">Непредвиденная ошибка</string>
    <string name="positive_button">OK</string>
    <string name="start_amount">100</string>
    <string name="request_forbidden_error_text">Кажется произошла ошибка авторизации. Попробуйте перзапустить приложение</string>
    <string name="request_loans_conditions_error_text">Какие-то проблемы на сервере. Не удается найти условия займа</string>
    <string name="request_network_error_text">Проблема с сетевым подключением. Проверьте, включен ли у вас интернет</string>
    <string name="request_not_found_error_text">Важный элемент не был найден в ответе сервера</string>
    <string name="request_request_error_text">Проблема с запросом на сервер</string>
    <string name="request_response_error_text">Непредвиденная ошибка в ответе сервера</string>
    <string name="request_unauthorized_error_text">Кажется произошла ошибка авторизации. Попробуйте перзапустить приложение</string>
    <string name="request_unknown_error_text">Непредвиденная ошибка</string>
    <string name="request_positive_button">OK</string>
    <string name="empty_fields_warning">Заполните пожалуйста правильно все поля</string>
    <string name="details_forbidden_error_text">Кажется произошла ошибка авторизации. Попробуйте перзапустить приложение</string>
    <string name="details_single_loan_error_text">Какие-то проблемы на сервере. Не удается получить данные по займу</string>
    <string name="details_network_error_text">Проблема с сетевым подключением. Проверьте, включен ли у вас интернет</string>
    <string name="details_not_found_error_text">Важный элемент не был найден в ответе сервера</string>
    <string name="details_request_error_text">Проблема с запросом на сервер</string>
    <string name="details_response_error_text">Непредвиденная ошибка в ответе сервера</string>
    <string name="details_unauthorized_error_text">Кажется произошла ошибка авторизации. Попробуйте перзапустить приложение</string>
    <string name="details_unknown_error_text">Непредвиденная ошибка</string>
    <string name="details_positive_button">OK</string>
    <string name="loans_forbidden_error_text">Кажется произошла ошибка авторизации. Попробуйте перзапустить приложение</string>
    <string name="loans_network_error_text">Проблема с сетевым подключением. Проверьте, включен ли у вас интернет</string>
    <string name="loans_not_found_error_text">Важный элемент не был найден в ответе сервера</string>
    <string name="loans_request_error_text">Проблема с запросом на сервер</string>
    <string name="loans_response_error_text">Непредвиденная ошибка в ответе сервера</string>
    <string name="loans_unauthorized_error_text">Кажется произошла ошибка авторизации. Попробуйте перзапустить приложение</string>
    <string name="loans_unknown_error_text">Непредвиденная ошибка</string>
    <string name="loans_positive_button">OK</string>
    <string name="menu_positive_button">OK</string>
    <string name="exit_positive_button">Выйти</string>
    <string name="exit_negative_button">Отмена</string>
    <string name="exit_dialog_message">Вы точно хотите выйти?</string>

</resources>